区分开发与部署代码

--- a/denon.yml
+++ b/denon.yml
@@ -1,7 +1,7 @@
 scripts:
   lint: deno fmt --check .
-  start:
-    cmd: deno run entry.ts
+  dev:
+    cmd: deno run src/entry.ts
     allow:
       - net
       - env
