--- a/denon.yml
+++ b/denon.yml
@@ -1,10 +1,10 @@
 scripts:
   lint: deno fmt --check .
   build:
-    cmd: deno bundle src/entry.ts dist/entry.ts
+    cmd: deno bundle src/entry.ts dist/entry.js
     watch: false
   start:
-    cmd: deno run dist/entry.ts
+    cmd: deno run dist/entry.js
     allow:
       - net
       - env
